--- a/frontend/main/src/pages/Bio/Bio.module.scss
+++ b/frontend/main/src/pages/Bio/Bio.module.scss
@@ -1,5 +1,16 @@
-.container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
+.container {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  max-width: 28rem;
+  padding: 2rem 3rem 0 3rem;
+  .title {
+    font-size: 2rem;
+    color: var(--primary-text);
+    margin-bottom: 1.5rem;
+  }
+  .button{
+    width: 100%;
+    margin-top: 2rem;
+  }
 }
